--- a/Styles.css
+++ b/Styles.css
@@ -191,4 +191,84 @@ body {
   border-radius: 6px;
   box-shadow: 1px 3px 5px black;
 }
-/*above is product content*/
+/*above is product content
+/*about*/
+#ecoIcon {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 2.5rem;
+}
+.aboutUs-content {
+  font-size: 1.2em;
+  padding: 0 40px 5px 10px;
+}
+.infoCard h1 {
+  font-size: 1.5em;
+}
+.infoCard h2,
+.infoList h2 {
+  font-size: 1.3em;
+}
+.infoList h3 {
+  font-size: 1.1em;
+}
+.infoCard,
+.infoList {
+  margin-bottom: 20px;
+  text-align: left;
+}
+.infoList {
+  max-width: 600px;
+}
+.infoList li {
+  margin: 5px 0 10px 10px;
+}
+.ctaInfo {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+#ctaInfo-button {
+  font-size: 1.5em;
+  background-color: var(--rainyBlue);
+  color: var(--mainWhite);
+  text-decoration: none;
+  padding: 5px 10px 5px 10px;
+  text-align: center;
+  border-radius: 6px;
+  box-shadow: 1px 3px 5px black;
+  transition: 0.3s;
+}
+#ctaInfo-button:hover {
+  box-shadow: 0 5px 5px 0 black;
+}
+/*about*/
+/*Contact*/
+.contactForm {
+  display: flex;
+}
+.contactForm input,
+textarea {
+  display: flex;
+  width: 400px;
+  padding: 12px;
+  border: 1px solid;
+  border-radius: 6px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+#submitButton {
+  display: inline-block;
+  background-color: var(--rainyBlue);
+  color: var(--mainWhite);
+  margin: auto;
+  text-align: center;
+  width: 200px;
+  font-size: 1.5em;
+  padding: 10px 5px 10px 5px;
+}
