--- a/Styles.css
+++ b/Styles.css
@@ -12,14 +12,27 @@ body {
 }
 /* Below is header styling*/
 .navmenu {
-  display: block;
+  display: flex;
+
   border: 1px solid;
   width: 100%;
   height: 180px;
   background-color: rgba(231, 228, 228, 0.82);
   margin-bottom: 0;
-  display: inline-flex;
   text-align: center;
+}
+@media (max-width: 1000px) {
+  .navmenu {
+    display: flex;
+  }
+  a.links,
+  a.linkscart {
+    display: none;
+  }
+  a#rainyLogo {
+    display: inline-flex;
+    left: 15%;
+  }
 }
 #rainyLogo {
   display: flex;
@@ -27,16 +40,19 @@ body {
   bottom: 6px;
   right: 50px;
   scale: 55%;
-  margin-right: 70px;
+  margin-right: 100px;
 }
 
 .links,
 .linkscart {
   display: flex;
-  position: relative;
+  flex: 1;
+  text-align: center;
+  margin: auto;
   margin-top: 70px;
   text-decoration: none;
   transition: 0.3s;
+  justify-content: center;
 }
 .links:hover {
   box-shadow: 0 5px 5px 0 black;
@@ -45,14 +61,14 @@ body {
   text-shadow: 5px 1px 5px black;
 }
 .links {
-  display: inline-flex;
-  text-align: center;
-  font-size: 1.9rem;
+  font-size: 2.2rem;
   color: var(--mainWhite);
   background-color: var(--rainyBlue);
+  justify-content: center;
   margin-right: 20px;
   margin-bottom: auto;
-  padding: 8px 40px 8px 40px;
+  max-width: 250px;
+  padding: 10px 0 10px;
   border-radius: 6px;
 }
 .links:last-child {
@@ -60,8 +76,9 @@ body {
 }
 
 .linkscart {
+  position: relative;
   font-size: 4.4rem;
-  bottom: 19px;
+  bottom: 18px;
   left: 5px;
   padding: 0;
 }
@@ -152,27 +169,25 @@ body {
   margin-bottom: 10px;
   letter-spacing: 2px;
 }
-.product-cards,
-.card-last {
-  display: flex;
-  flex-wrap: wrap;
+.product-cards {
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 .card {
+  display: inline-grid;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  flex: 1;
-  max-width: auto;
-  margin: 15px 15px 15px 15px;
+
+  max-width: 500px;
+  margin: 15px 5px 15px 5px;
   text-align: left;
   padding: 4px 6px 2px 6px;
 }
-.card-last {
-  display: inline-block;
-  margin: 15px 15px 15px 15px;
-  text-align: left;
-  padding: 4px 6px 2px 6px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 380px;
+@media (max-width: 950px) {
+  .product-cards {
+    grid-template-columns: auto;
+  }
 }
+
 .price {
   color: rgb(72, 71, 71);
   font-size: 22px;
