--- a/Styles.css
+++ b/Styles.css
@@ -3,6 +3,7 @@
   --mainWhite: #fdf8f1;
 }
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -13,46 +14,26 @@ body {
 /* Below is header styling*/
 .navmenu {
   display: flex;
+  justify-content: space-between;
+  padding: 30px 10%;
+}
 
-  border: 1px solid;
-  width: 100%;
-  height: 180px;
-  background-color: rgba(231, 228, 228, 0.82);
-  margin-bottom: 0;
-  text-align: center;
-}
-@media (max-width: 1000px) {
-  .navmenu {
-    display: flex;
-  }
-  a.links,
-  a.linkscart {
-    display: none;
-  }
-  a#rainyLogo {
-    display: inline-flex;
-    left: 15%;
-  }
-}
 #rainyLogo {
-  display: flex;
-  position: relative;
-  bottom: 6px;
-  right: 50px;
-  scale: 55%;
-  margin-right: 100px;
+  cursor: pointer;
+
+  padding: auto;
+  margin: auto;
+  width: 200px;
 }
 
 .links,
 .linkscart {
-  display: flex;
-  flex: 1;
+  display: inline-block;
   text-align: center;
   margin: auto;
   margin-top: 70px;
   text-decoration: none;
   transition: 0.3s;
-  justify-content: center;
 }
 .links:hover {
   box-shadow: 0 5px 5px 0 black;
@@ -64,9 +45,9 @@ body {
   font-size: 2.2rem;
   color: var(--mainWhite);
   background-color: var(--rainyBlue);
-  justify-content: center;
+
   margin-right: 20px;
-  margin-bottom: auto;
+
   max-width: 250px;
   padding: 10px 0 10px;
   border-radius: 6px;
@@ -76,11 +57,71 @@ body {
 }
 
 .linkscart {
-  position: relative;
   font-size: 4.4rem;
   bottom: 18px;
   left: 5px;
   padding: 0;
+}
+#bars-menu {
+  display: none;
+}
+nav.hamburger {
+  display: none;
+}
+
+input#hamburger-menu {
+  display: none;
+}
+input#hamburger-menu:checked ~ nav.hamburger {
+  display: block;
+}
+
+label[for="hamburger-menu"] {
+  font-size: 2em;
+}
+#bars-menu,
+nav.hamburger {
+}
+nav.hamburger ul {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  width: 150px;
+}
+nav.hamburger li {
+  margin-bottom: 5px; /**/
+}
+nav.hamburger li a {
+  text-decoration: none;
+  color: white;
+  background: black;
+  padding: 2px 5px;
+  border: 1px solid black;
+  display: block;
+  text-align: center;
+}
+nav.hamburger li:last-child {
+  margin-bottom: 0;
+}
+nav.hamburger li a:hover {
+  color: black;
+  background: white;
+}
+@media (max-width: 700px) {
+  .navmenu {
+    display: flex;
+  }
+  a.links,
+  a.linkscart {
+    display: none;
+  }
+  a#rainyLogo {
+    display: inline-flex;
+  }
+  #bars-menu {
+    display: block;
+  }
 }
 /*Above is the desktop styling*/
 /* Below is the home content*/
